--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,24 +1,29 @@
 @media screen and (max-width: 760px) {
-    
-    body{
+
+    header{
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative;
+        width: 100%;
     }
 
-    header{
-        flex-direction: column;
-        margin: 0 auto;
+    #title{
+        justify-content: center;
+        
     }
 
-    #input_search{
-        width: 12em;
+    #nav_bar{
+        position: absolute;
+        top: 10%;
+        right: 0px;
+        background-color: #f0f2b7;
     }
 
-    #nav_topics, #title{
-        margin: 0 auto;
+    #navbarNav{
+        height: 100vh;
+        transition: 0.5s all;
     }
-
     main{
         display: flex;
         flex-direction: column;
